<resources>
    <string name="app_name">M-Ables</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Вход</string>
    <string name="entry_auth_message">Добро пожаловать,\n войдите в свой аккаунт, чтобы продолжить</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_logo">Войти</string>
    <string name="no_acc">У вас нет аккаунта?</string>
    <string name="create_acc">Создайте аккаунт</string>
    <string name="register">Зарегестрироваться</string>
    <string name="surname">Фамилия</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="birth_date">Дата рождения</string>
    <string name="email">E-mail</string>
    <string name="have_acc">У вас есть аккаунт?</string>
    <string name="enter_acc">Вход в аккаунт</string>
    <string name="enter_email_explanation">Если вы забыли пароль пользователя введите E-mail для сброса пароля</string>
    <string name="continue_text">Продолжить</string>
    <string name="no_internet">Нет интернета</string>
    <string name="enter_surname">Введите фамилию</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_birthdate">Введите дату рождения</string>
    <string name="enter_email">Введите адрес эл. почты</string>
    <string name="enter_password">Введите пароль</string>
    <string name="registration_error">Что-то пошло не так. Попробуйте еще раз поднее</string>
    <string name="registration_data_error">Что-то пошло не так. Не получилось сохранить данные о пользователе. Попробуйте еще раз поднее</string>
    <string name="registration_success">Пользователь успешно создан</string>
    <string name="invalid_email">Неверный формат почты</string>
    <string name="invalid_password">Введите пароль. Пароль должен быть больше 8 символов</string>
    <string name="page_is_in_progress">"Данная страница в разработке "</string>
    <string name="main_page">Главная</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="lessons_logo">Выберите области оценки</string>
    <string name="lessons_logo_description">Методика оценки базовых речевых и учебных навыков ABLLS-R</string>
    <string name="students">Ученики</string>
    <string name="no_students">Список учеников пуст</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="choose_user_type">Выберите тип пользователя</string>
    <string name="teacher">Эксперт</string>
    <string name="student">Ученик</string>
    <string name="chapterA">"Сотрудничество и  эффективность поощрений "</string>
    <string name="start_date">Дата начала</string>
    <string name="end_date">Дата окончания</string>
    <string name="no_tasks">Нет заданий</string>
    <string name="test_student">Начать тестирование</string>
    <string name="text_history">Прибыл в центр: 20.06.2018
        \nДиагноз: Аутизм
        \nСостояние: Нормальное
        \nБолезни: Отсутвуют
        \nПрошлые преподователи: Ивaнов Иванович
        \nМать: 0555 555 555
        \nОтец: 0700 700 700
        \nВрач: 0900 900 900</string>
</resources>