<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="login"
            type="String" />
        <variable
            name="password_auth"
            type="String" />
    </data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".fragments.AuthFragment">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_auth_message"
            android:gravity="center"
            android:layout_marginTop="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_otf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_auth"
                android:text="@{login}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_otf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingTop="16dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_auth"
                android:text="@{password_auth}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotPassword_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/gray_signIn"
            android:textSize="16sp"
            android:layout_gravity="right" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signIn_btn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_rounded"
                android:text="@string/login_logo"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progress_bar_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:visibility="gone" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no_acc"
                android:layout_weight="1"
                android:gravity="right" />

            <Button
                android:id="@+id/createAcc_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/create_acc"
                android:textAllCaps="false"
                android:textColor="@color/primary_blue" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

</layout>