<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.UserTypeFragment">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_margin="16dp"
           android:layout_marginTop="20dp">

           <ImageView
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:src="@drawable/title"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="35dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/welcome"
               android:textSize="30sp"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="50dp" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/choose_user_type"
               android:gravity="center"
               android:layout_marginTop="10dp" />

           <Button
               android:id="@+id/teacher_btn"
               android:layout_width="match_parent"
               android:layout_height="56dp"
               android:layout_marginTop="40dp"
               android:background="@drawable/button_rounded"
               android:text="@string/teacher"
               android:textColor="@android:color/white" />

           <Button
               android:id="@+id/student_btn"
               android:layout_width="match_parent"
               android:layout_height="56dp"
               android:layout_marginTop="20dp"
               android:background="@drawable/button_rounded"
               android:text="@string/student"
               android:textColor="@android:color/white" />

       </LinearLayout>

    </ScrollView>
</layout>