<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ForgotPasswordFragment"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/enter_email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enter_email_explanation_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_email_tv"
            android:layout_marginTop="20dp"
            android:text="@string/enter_email_explanation"
            android:textAlignment="center"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_otf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_email_explanation_tv"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress_bar_password"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_otf"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/primary_blue" />

        <Button
            android:id="@+id/sendLink_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/email_otf"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_rounded"
            android:text="@string/continue_text"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</layout>